fixed the visibility of modal on not wide screens

--- a/flashcard/css/custom.css
+++ b/flashcard/css/custom.css
@@ -603,7 +603,7 @@ a:hover {
   -webkit-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
   transform: translate(0, 0);
-  top: 20%;
+  top: 5%;
 }
 .modal-dialog {
   background: #fefefe;
